First working version of search

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
@@ -15,6 +15,22 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+    </style>
+
+    <style name="SectionItemStyle">
+        <item name="android:padding">?sectionListView.sectionItemPadding</item>
+        <item name="android:background">?sectionListView.sectionItemBackground</item>
+    </style>
+
+    <style name="ListTextViewStyle" parent="@android:style/TextAppearance">
+        <item name="android:padding">?sectionListView.listTextViewPadding</item>
+        <item name="android:textColor">?sectionListView.listTextViewTextColor</item>
+        <item name="android:textSize">?sectionListView.listTextViewTextSize</item>
+    </style>
+
+    <style name="ListItemStyle">
+        <item name="android:padding">?sectionListView.listItemPadding</item>
+        <item name="android:background">?sectionListView.listItemBackground</item>
     </style>
 
 </resources>
