--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -32,5 +32,10 @@
         <item name="android:padding">?sectionListView.listItemPadding</item>
         <item name="android:background">?sectionListView.listItemBackground</item>
     </style>
-
+    
+    <style name="LoginFormContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
 </resources>
