--- a/res/layout/spellbook_fragment.xml
+++ b/res/layout/spellbook_fragment.xml
@@ -4,21 +4,53 @@
 	android:layout_height="match_parent"
 	android:orientation="vertical" >
 
+
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
+
 		<TextView
-			android:id="@+id/class_text"
+			android:id="@+id/spellbook_name"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="Classes">
-			<requestFocus />
-		</TextView>
-		<Spinner
-			android:id="@+id/class_spinner"
+			android:paddingBottom="2dp"
+			android:paddingLeft="2dp"
+			android:paddingRight="2dp"
+			android:paddingTop="2dp"
+			android:textAppearance="?android:attr/textAppearanceLarge" />
+		
+	
+		<TextView
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"/>
+			android:layout_height="wrap_content"
+			android:paddingBottom="2dp"
+			android:paddingLeft="2dp"
+			android:paddingTop="2dp"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:text="(" />
+		<TextView
+			android:id="@+id/spellbook_class"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:paddingBottom="2dp"
+			android:paddingTop="2dp"
+			android:textAppearance="?android:attr/textAppearanceLarge" />
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:paddingBottom="2dp"
+			android:paddingRight="2dp"
+			android:paddingTop="2dp"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:text=")" />
+				
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
 		<TextView
 			android:id="@+id/level_text"
 			android:layout_width="wrap_content"
@@ -28,11 +60,6 @@
 			android:id="@+id/level_spinner"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"/>
-	</LinearLayout>
-
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content" >
 		<TextView
 			android:id="@+id/name_text"
 			android:layout_width="wrap_content"
@@ -58,7 +85,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textSize="20sp"
-		android:text="Add some search criteria" />
+		android:text="No spells added yet." />
 
 	<FrameLayout
 		android:layout_width="fill_parent"
