--- a/res/layout/spellbook_edit_fragment.xml
+++ b/res/layout/spellbook_edit_fragment.xml
@@ -11,46 +11,22 @@
 		android:orientation="horizontal">
 
 		<TextView
-			android:id="@+id/spellbook_name"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:paddingBottom="2dp"
-			android:paddingLeft="2dp"
-			android:paddingRight="2dp"
-			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge" />
-		
-	
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:paddingBottom="2dp"
-			android:paddingLeft="2dp"
-			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="(" />
-		<TextView
 			android:id="@+id/spellbook_class"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_height="match_parent"
 			android:paddingBottom="2dp"
 			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge" />
+			android:textStyle="bold"
+			android:gravity="center_vertical"
+			android:textAppearance="?android:attr/textAppearanceMedium" />
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:paddingBottom="2dp"
-			android:paddingRight="2dp"
+			android:paddingLeft="2dp"
 			android:paddingTop="2dp"
 			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text=")" />
-				
-	</LinearLayout>
-
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal">
+			android:text="  " />
 		<TextView
 			android:id="@+id/level_text"
 			android:layout_width="wrap_content"
@@ -60,6 +36,12 @@
 			android:id="@+id/level_spinner"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"/>
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal">
 		<TextView
 			android:id="@+id/name_text"
 			android:layout_width="wrap_content"
@@ -79,13 +61,6 @@
 			android:layout_height="wrap_content"
 			android:text="Filters" />
 	</LinearLayout>
-	
-	<TextView
-		android:id="@+id/add_search"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textSize="20sp"
-		android:text="No spells added yet." />
 
 	<FrameLayout
 		android:layout_width="fill_parent"
