--- a/res/layout/spellbook_fragment.xml
+++ b/res/layout/spellbook_fragment.xml
@@ -11,55 +11,44 @@
 		android:orientation="horizontal">
 
 		<TextView
-			android:id="@+id/spellbook_name"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:paddingBottom="2dp"
-			android:paddingLeft="2dp"
-			android:paddingRight="2dp"
-			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge" />
-		
-	
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:paddingBottom="2dp"
-			android:paddingLeft="2dp"
-			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text="(" />
-		<TextView
 			android:id="@+id/spellbook_class"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
+			android:layout_height="match_parent"
 			android:paddingBottom="2dp"
 			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge" />
-		<TextView
-			android:layout_width="wrap_content"
+			android:textStyle="bold"
+			android:gravity="center_vertical"
+			android:textAppearance="?android:attr/textAppearanceMedium" />
+		<LinearLayout
+			android:id="@+id/search_layout1"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:paddingBottom="2dp"
-			android:paddingRight="2dp"
-			android:paddingTop="2dp"
-			android:textAppearance="?android:attr/textAppearanceLarge"
-			android:text=")" />
-				
+			android:orientation="horizontal">
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:paddingBottom="2dp"
+				android:paddingLeft="2dp"
+				android:paddingTop="2dp"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:text="  " />
+			<TextView
+				android:id="@+id/level_text"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Levels" />
+			<Spinner
+				android:id="@+id/level_spinner"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"/>
+		</LinearLayout>
 	</LinearLayout>
 
 	<LinearLayout
+		android:id="@+id/search_layout2"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal">
-		<TextView
-			android:id="@+id/level_text"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="Levels" />
-		<Spinner
-			android:id="@+id/level_spinner"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"/>
 		<TextView
 			android:id="@+id/name_text"
 			android:layout_width="wrap_content"
@@ -85,7 +74,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textSize="20sp"
-		android:text="No spells added yet." />
+		android:text="Swipe to the right to add spells." />
 
 	<FrameLayout
 		android:layout_width="fill_parent"
