--- a/res/menu/fragment_spellbook.xml
+++ b/res/menu/fragment_spellbook.xml
@@ -2,7 +2,7 @@
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
         <group android:id="@+id/spellbook">
             <item android:id="@+id/menu_rename_spellbook" android:title="Rename"></item>
-            <item android:id="@+id/menu_change_class" android:title="Change Spellbook Class"></item>
             <item android:id="@+id/menu_delete_spellbook" android:title="Delete Spellbook"></item>
+            <item android:id="@+id/menu_add" android:icon="@drawable/ic_menu_add" android:title="Add spells" android:showAsAction="ifRoom"/>
         </group>
     </menu>
